@@ -5,16 +5,23 @@ plugins {
 group 'top.abosen'
 version '1.0'
 
-sourceCompatibility = 1.11
+// 手动设置 preview 版本
+sourceCompatibility = 1.13
 
 repositories {
     maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
     mavenCentral()
 }
 
+compileJava{
+    // 用于支持 text block
+//    options.compilerArgs << "--enable-preview"
+}
+
 dependencies {
 
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.3'
-    compile group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.3'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.10.3'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.10.3'
+    implementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
 }
